Added metadata and merged the reviews and metadata dataframes, added some data cleaning todos

--- a/LoadData_GiftCards.ipynb
+++ b/LoadData_GiftCards.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Useful links:\n",
+    "- [Dataset documentation](https://nijianmo.github.io/amazon/index.html)\n",
+    "- [Complete Metadata files](http://deepyeti.ucsd.edu/jianmo/amazon/index.html)\n",
+    "- [Pandas reference sheet](https://ds100.org/sp21/resources/assets/exams/sp20/sp20_checkpoint_reference_sheet.pdf)\n",
+    "- [Data-200 Google Doc](https://docs.google.com/document/d/19HWODy5kpWoUB7BEKEmKLbRnK8MC1fBmRat_WP7vfNc/edit)\n",
+    "- [Grad Project Guidelines](https://ds100.org/sp21/grad_proj/gradproject/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -23,7 +35,109 @@
    "source": [
     "url = \"http://deepyeti.ucsd.edu/jianmo/amazon/categoryFilesSmall/Gift_Cards_5.json.gz\"\n",
     "filename = 'Gift_Cards.json.gz'\n",
-    "urllib.request.urlretrieve(url,filename)\n"
+    "if not os.path.exists(filename):\n",
+    "    urllib.request.urlretrieve(url,filename)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### load the data\n",
+    "\n",
+    "data = []\n",
+    "with gzip.open(filename) as f:\n",
+    "    for l in f:\n",
+    "        data.append(json.loads(l.strip()))\n",
+    "    \n",
+    "# total length of list, this number equals total number of reviews\n",
+    "print(len(data))\n",
+    "\n",
+    "# first row of the list\n",
+    "print(data[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Convert to dataframe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews = pd.DataFrame.from_dict(data)\n",
+    "reviews.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check score-wise values\n",
+    "reviews[(reviews['overall'] == 5)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Column labels:\n",
+    "- reviewerID - ID of the reviewer, e.g. A2SUAM1J3GNN3B\n",
+    "- asin - ID of the product, e.g. 0000013714\n",
+    "- reviewerName - name of the reviewer\n",
+    "- vote - helpful votes of the review\n",
+    "- style - a disctionary of the product metadata, e.g., \"Format\" is \"Hardcover\"\n",
+    "- reviewText - text of the review\n",
+    "- overall - rating of the product\n",
+    "- summary - summary of the review\n",
+    "- unixReviewTime - time of the review (unix time)\n",
+    "- reviewTime - time of the review (raw)\n",
+    "- image - images that users post after they have received the product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Checking 5-core:\n",
+    "A 5-core dataset contains only those users with at least 5 reviews."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews.groupby(by=\"reviewerID\").size().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import metadata:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"http://deepyeti.ucsd.edu/jianmo/amazon/metaFiles/meta_Gift_Cards.json.gz\"\n",
+    "filename = 'Meta_Gift_Cards.json.gz'\n",
+    "if not os.path.exists(filename):\n",
+    "    urllib.request.urlretrieve(url,filename)"
    ]
   },
   {
@@ -50,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert to dataframe:"
+    "#### Convert to dataframe:"
    ]
   },
   {
@@ -59,9 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame.from_dict(data)\n",
-    "df.shape\n",
-    "df.head()"
+    "metadata = pd.DataFrame.from_dict(data)\n",
+    "metadata.head()"
    ]
   },
   {
@@ -70,24 +183,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[(df['overall'] == 2) and (df['overall'] == 2)]"
+    "metadata['asin'].value_counts().sort_values()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- reviewerID - ID of the reviewer, e.g. A2SUAM1J3GNN3B\n",
-    "- asin - ID of the product, e.g. 0000013714\n",
-    "- reviewerName - name of the reviewer\n",
-    "- vote - helpful votes of the review\n",
-    "- style - a disctionary of the product metadata, e.g., \"Format\" is \"Hardcover\"\n",
-    "- reviewText - text of the review\n",
-    "- overall - rating of the product\n",
-    "- summary - summary of the review\n",
-    "- unixReviewTime - time of the review (unix time)\n",
-    "- reviewTime - time of the review (raw)\n",
-    "- image - images that users post after they have received the product"
+    "#### Merging the reviews and metadata on `asin`:"
    ]
   },
   {
@@ -96,7 +199,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(by=\"reviewerID\").size()\n"
+    "df = reviews.merge(metadata,how=\"left\",left_on = \"asin\",right_on = \"asin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Column labels:\n",
+    "- asin - ID of the product, e.g. 0000031852\n",
+    "- title - name of the product\n",
+    "- feature - bullet-point format features of the product\n",
+    "- description - description of the product\n",
+    "- price - price in US dollars (at time of crawl)\n",
+    "- image - url of the product image\n",
+    "- related - related products (also bought, also viewed, bought together, buy after viewing)\n",
+    "- salesRank - sales rank information\n",
+    "- brand - brand name\n",
+    "- categories - list of categories the product belongs to\n",
+    "- tech1 - the first technical detail table of the product\n",
+    "- tech2 - the second technical detail table of the product\n",
+    "- similar - similar product table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We can clean the data a little: \n",
+    "- Change `overall` column name to `rating`\n",
+    "- `asin` to `productid`\n",
+    "- Extract `gift_amount` from `style`\n",
+    "- Extract `rank#` from `rank`\n",
+    "- Rempve rows with no information on the price either from `price` column or from `gift_amount` as both should be the same\n",
+    "- `price` missing? Change dataset?"
    ]
   },
   {
