Add metadata with ratings and other small changes

--- a/LoadData_Appliances.ipynb
+++ b/LoadData_Appliances.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "url = \"http://deepyeti.ucsd.edu/jianmo/amazon/categoryFilesSmall/Appliances_5.json.gz\"\n",
-    "filename = 'Appliances_5.json.gz'\n",
+    "filename = 'data/Appliances_5.json.gz'\n",
     "urllib.request.urlretrieve(url,filename)\n"
    ]
   },
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[(df['overall'] == 2) and (df['overall'] == 2)]"
+    "df[(df['overall'] == 2) & (df['overall'] == 2)]"
    ]
   },
   {
