--- a/LoadData_GiftCards.ipynb
+++ b/LoadData_GiftCards.ipynb
@@ -4,12 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Useful links:\n",
+    "## Useful links:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- [Dataset documentation](https://nijianmo.github.io/amazon/index.html)\n",
     "- [Complete Metadata files](http://deepyeti.ucsd.edu/jianmo/amazon/index.html)\n",
     "- [Pandas reference sheet](https://ds100.org/sp21/resources/assets/exams/sp20/sp20_checkpoint_reference_sheet.pdf)\n",
     "- [Data-200 Google Doc](https://docs.google.com/document/d/19HWODy5kpWoUB7BEKEmKLbRnK8MC1fBmRat_WP7vfNc/edit)\n",
     "- [Grad Project Guidelines](https://ds100.org/sp21/grad_proj/gradproject/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load review data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import data"
    ]
   },
   {
@@ -34,7 +54,7 @@
    "outputs": [],
    "source": [
     "url = \"http://deepyeti.ucsd.edu/jianmo/amazon/categoryFilesSmall/Gift_Cards_5.json.gz\"\n",
-    "filename = 'Gift_Cards.json.gz'\n",
+    "filename = 'data/Gift_Cards.json.gz'\n",
     "if not os.path.exists(filename):\n",
     "    urllib.request.urlretrieve(url,filename)\n"
    ]
@@ -63,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Convert to dataframe:"
+    "### Convert to dataframe:"
    ]
   },
   {
@@ -87,10 +107,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews['asin'].value_counts().describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Column labels:\n",
+    "### Column labels:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- reviewerID - ID of the reviewer, e.g. A2SUAM1J3GNN3B\n",
     "- asin - ID of the product, e.g. 0000013714\n",
     "- reviewerName - name of the reviewer\n",
@@ -108,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Checking 5-core:\n",
+    "### Checking 5-core:\n",
     "A 5-core dataset contains only those users with at least 5 reviews."
    ]
   },
@@ -125,7 +160,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import metadata:"
+    "## Load metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import metadata:"
    ]
   },
   {
@@ -135,7 +177,7 @@
    "outputs": [],
    "source": [
     "url = \"http://deepyeti.ucsd.edu/jianmo/amazon/metaFiles/meta_Gift_Cards.json.gz\"\n",
-    "filename = 'Meta_Gift_Cards.json.gz'\n",
+    "filename = 'data/Meta_Gift_Cards.json.gz'\n",
     "if not os.path.exists(filename):\n",
     "    urllib.request.urlretrieve(url,filename)"
    ]
@@ -164,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Convert to dataframe:"
+    "### Convert to dataframe:"
    ]
   },
   {
@@ -183,14 +225,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata['asin'].value_counts().sort_values()"
+    "metadata['asin'].value_counts().describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Merging the reviews and metadata on `asin`:"
+    "## Merge reviews and metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merging the reviews and metadata on `asin`:"
    ]
   },
   {
@@ -221,10 +270,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['asin'].value_counts().describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Column labels:\n",
+    "### Column labels:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- asin - ID of the product, e.g. 0000031852\n",
     "- title - name of the product\n",
     "- feature - bullet-point format features of the product\n",
@@ -244,13 +308,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We can clean the data a little: \n",
+    "### We can clean the data a little: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Change `overall` column name to `rating`\n",
     "- `asin` to `productid`\n",
     "- Extract `gift_amount` from `style`\n",
     "- Extract `rank#` from `rank`\n",
     "- Rempve rows with no information on the price either from `price` column or from `gift_amount` as both should be the same\n",
     "- `price` missing? Change dataset?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregate reviews to get average rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if the ratings have missing data.\n",
+    "display(reviews['overall'].describe())\n",
+    "print('number of nulls:', reviews['overall'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = reviews[['asin', 'overall']].groupby('asin').agg('mean').rename(columns={'overall': 'rating'})\n",
+    "metadata_with_ratings = metadata.merge(ratings, how=\"left\", on=\"asin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_with_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check how many products have ratings.\n",
+    "display(metadata_with_ratings['rating'].describe())\n",
+    "print('number of nulls:', metadata_with_ratings['rating'].isnull().sum())"
    ]
   },
   {
