Add more exploration of features

--- a/alex_eda.ipynb
+++ b/alex_eda.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data"
+    "## Utils"
    ]
   },
   {
@@ -40,8 +40,10 @@
     "from urllib.request import urlopen\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
@@ -51,6 +53,8 @@
    "outputs": [],
    "source": [
     "# Utils.\n",
+    "\n",
+    "#################################### Loading data. ####################################\n",
     "\n",
     "def load_data(url, filename):\n",
     "    if not os.path.exists(filename):\n",
@@ -78,29 +82,11 @@
     "    print('number of missing ratings:', metadata_with_ratings['rating'].isnull().sum())\n",
     "    return metadata_with_ratings\n",
     "\n",
+    "################################## Data exploration. ##################################\n",
+    "\n",
     "def describe_feat(data, feat):\n",
     "    display(data[feat].describe())\n",
     "    print(f'number of missing {feat}s:', data[feat].isnull().sum())\n",
-    "\n",
-    "def clean_features(metadata_with_ratings):\n",
-    "    # Clean price.\n",
-    "    metadata_with_ratings['price_float'] = pd.to_numeric(\n",
-    "            metadata_with_ratings['price'].str.replace('$', ''), errors='coerce')\n",
-    "    describe_feat(metadata_with_ratings, 'price_float')\n",
-    "    \n",
-    "    metadata_with_ratings['rank_float'] = pd.to_numeric(metadata_with_ratings['rank'].str.replace(',', '') \\\n",
-    "                                                      .str.extract('^(\\d+)', expand=False), errors='coerce')\n",
-    "    describe_feat(metadata_with_ratings, 'rank_float')\n",
-    "    \n",
-    "    metadata_with_ratings['rank_category'] = metadata_with_ratings['rank'] \\\n",
-    "                .str.extract(' in (.+) \\(', expand=False) \\\n",
-    "                .str.replace('&amp;', '&')\n",
-    "    print('categories:')\n",
-    "    print(metadata_with_ratings['rank_category'].value_counts())\n",
-    "    \n",
-    "def transform_col(data, func, feat, new_feat):\n",
-    "    data[new_feat] = func(metadata_with_ratings[feat])\n",
-    "    data[new_feat].describe()\n",
     "\n",
     "def plot_joint(data, x, y):\n",
     "    sns.jointplot(data=data, x=x, y=y, kind='reg',\n",
@@ -108,7 +94,52 @@
     "    data_cleaned = data.query(f'not {x}.isnull() and not {y}.isnull()')\n",
     "    X = data_cleaned[x].to_numpy().reshape(-1, 1)\n",
     "    model = LinearRegression().fit(X, data_cleaned[y])\n",
-    "    print(f'y = {model.intercept_} + {model.coef_[0]} * x, r^2 = {model.score(X, data_cleaned[y])}')"
+    "    print(f'y = {model.intercept_} + {model.coef_[0]} * x, r^2 = {model.score(X, data_cleaned[y])}')\n",
+    "    \n",
+    "###################################### Modeling. ######################################\n",
+    "\n",
+    "def clean_features(metadata_with_ratings):\n",
+    "    # Clean price.\n",
+    "    metadata_with_ratings['price_float'] = pd.to_numeric(\n",
+    "            metadata_with_ratings['price'].str.replace('$', ''), errors='coerce')\n",
+    "    describe_feat(metadata_with_ratings, 'price_float')\n",
+    "    \n",
+    "    # Clean sales rank.\n",
+    "    metadata_with_ratings['rank_float'] = pd.to_numeric(metadata_with_ratings['rank'].str.replace(',', '') \\\n",
+    "                                                      .str.extract('^(\\d+)', expand=False), errors='coerce')\n",
+    "    describe_feat(metadata_with_ratings, 'rank_float')\n",
+    "    \n",
+    "    # Add sales rank category.\n",
+    "    metadata_with_ratings['rank_category'] = metadata_with_ratings['rank'] \\\n",
+    "                .str.extract(' in (.+) \\(', expand=False) \\\n",
+    "                .str.replace('&amp;', '&')\n",
+    "    print('categories:')\n",
+    "    print(metadata_with_ratings['rank_category'].value_counts())\n",
+    "    \n",
+    "    # Clean description.\n",
+    "    metadata_with_ratings['description_str'] = metadata_with_ratings['description'].str.join('\\n')\n",
+    "    \n",
+    "def transform_col(data, func, feat, new_feat):\n",
+    "    data[new_feat] = func(metadata_with_ratings[feat])\n",
+    "    data[new_feat].describe()\n",
+    "\n",
+    "def extract_words(data, feat, max_words=100):\n",
+    "    vectorizer = CountVectorizer(max_features=max_words, stop_words='english')\n",
+    "    X = vectorizer.fit_transform(data[feat]).toarray()\n",
+    "\n",
+    "    print('first 50 features:', vectorizer.get_feature_names()[:50])\n",
+    "    print('feature matrix shape', X.shape)\n",
+    "    return X\n",
+    "\n",
+    "def get_feat_matrix(data):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data"
    ]
   },
   {
@@ -246,13 +277,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sales rank vs average rating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The two products with no reviews.\n",
-    "metadata_with_ratings[metadata_with_ratings['rating'].isnull()]"
+    "metadata_beauty.query('rating.isnull()')"
    ]
   },
   {
@@ -287,6 +325,90 @@
    "outputs": [],
    "source": [
     "plot_joint(data=metadata_beauty, x='rank_float', y='rating')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Price vs sales rank and rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_truncated = metadata_beauty.query('price_float < 100')\n",
+    "plot_joint(data=price_truncated, x='price_float', y='sqrt_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_truncated = metadata_beauty.query('price_float < 100')\n",
+    "plot_joint(data=price_truncated, x='price_float', y='rating')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Brand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brand_counts = metadata_beauty['brand'].value_counts()\n",
+    "display(brand_counts[:10])\n",
+    "display(brand_counts.iloc[1:].describe())\n",
+    "\n",
+    "brand_counts_filtered = brand_counts.iloc[1:]\n",
+    "brand_counts_filtered = brand_counts_filtered[brand_counts_filtered > 10]\n",
+    "fig = plt.figure(figsize=(12, 4))\n",
+    "plt.plot(np.arange(len(brand_counts_filtered)), brand_counts_filtered)\n",
+    "plt.ylabel('frequency')\n",
+    "plt.title('Frequency of occurence for brands, from most to least common')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Title and description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extract_words(metadata_beauty, 'title');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extract_words(metadata_beauty, 'description_str', 500);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PCA"
    ]
   },
   {
