Add more ML models

--- a/alex_eda.ipynb
+++ b/alex_eda.ipynb
@@ -43,14 +43,18 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.linear_model import LinearRegression, RidgeCV\n",
+    "from sklearn.linear_model import LinearRegression, RidgeCV, LassoCV\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn import model_selection"
+    "from sklearn import model_selection\n",
+    "\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
@@ -120,33 +124,41 @@
     "\n",
     "###################################### Modeling. ######################################\n",
     "\n",
-    "def clean_features(metadata_with_ratings):\n",
+    "def clean_features(metadata_with_ratings, training_data=None, output=True):\n",
+    "    if training_data is None:\n",
+    "        training_data = metadata_with_ratings\n",
     "    # Clean price.\n",
     "    metadata_with_ratings['price_float'] = pd.to_numeric(\n",
     "            metadata_with_ratings['price'].str.replace('$', ''), errors='coerce')\n",
-    "    describe_feat(metadata_with_ratings, 'price_float')\n",
+    "    if output:\n",
+    "        describe_feat(metadata_with_ratings, 'price_float')\n",
     "    \n",
     "    # Clean sales rank.\n",
     "    metadata_with_ratings['rank_float'] = pd.to_numeric(metadata_with_ratings['rank'].str.replace(',', '') \\\n",
     "                                                      .str.extract('^(\\d+)', expand=False), errors='coerce')\n",
-    "    describe_feat(metadata_with_ratings, 'rank_float')\n",
+    "    if output:\n",
+    "        describe_feat(metadata_with_ratings, 'rank_float', as_int=True)\n",
     "    \n",
     "    # Add sales rank category.\n",
     "    metadata_with_ratings['rank_category'] = metadata_with_ratings['rank'] \\\n",
     "                .str.extract(' in (.+) \\(', expand=False) \\\n",
     "                .str.replace('&amp;', '&')\n",
-    "    print('categories:')\n",
-    "    print(metadata_with_ratings['rank_category'].value_counts())\n",
+    "    if output:\n",
+    "        print('categories:')\n",
+    "        print(metadata_with_ratings['rank_category'].value_counts())\n",
     "    \n",
     "    # Clean description.\n",
     "    metadata_with_ratings['description_str'] = metadata_with_ratings['description'].str.join('\\n')\n",
     "    \n",
     "    # Clean brand.\n",
-    "    brand_counts = metadata_with_ratings['brand'].value_counts().iloc[1:]\n",
-    "    metadata_with_ratings['brand_count'] = metadata_with_ratings['brand'].replace(brand_counts).replace('', 0)\n",
-    "    describe_feat(metadata_with_ratings, 'brand_count')\n",
+    "    brand_counts = training_data['brand'].value_counts().iloc[1:]\n",
+    "    metadata_with_ratings['brand_count'] = pd.to_numeric(metadata_with_ratings['brand'].replace(brand_counts),\n",
+    "                                                         errors='coerce').fillna(0)\n",
+    "    if output:\n",
+    "        describe_feat(metadata_with_ratings, 'brand_count')\n",
     "    metadata_with_ratings['top_brand'] = (metadata_with_ratings['brand_count'] > 20).astype(int)\n",
-    "    print('percentage top brand:', metadata_with_ratings['top_brand'].mean())\n",
+    "    if output:\n",
+    "        print('percentage top brand:', metadata_with_ratings['top_brand'].mean())\n",
     "    \n",
     "def transform_col(data, func, feat, new_feat):\n",
     "    data[new_feat] = func(metadata_with_ratings[feat])\n",
@@ -201,6 +213,8 @@
     "def train_test_split(data, label):\n",
     "    data_train, data_test, y_train, y_test = \\\n",
     "            model_selection.train_test_split(data, data[label], test_size=0.2, random_state=314)\n",
+    "    clean_features(data_train, training_data=data_train, output=False)\n",
+    "    clean_features(data_test, training_data=data_train, output=False)\n",
     "    X_train, encoders = get_feat_matrix(data_train)\n",
     "    X_test, _ = get_feat_matrix(data_test, encoders=encoders)\n",
     "    print(f'Training data of shape {X_train.shape}, test data {X_test.shape}')\n",
@@ -685,13 +699,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ridge regression"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -710,12 +717,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ridge regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = train_ridge(X_train, X_test, y_train, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.round(model.coef_ * 10).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LASSO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = train_model(X_train, X_test, y_train, y_test, LassoCV(tol=0.1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Support vector machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# May take several minutes to train.\n",
+    "model = train_model(X_train, X_test, y_train, y_test, SVR(C=250))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting n_estimators to be greater increases r^2 slightly but takes much longer, so I just went with\n",
+    "# the default. Set n_jobs to make it faster.\n",
+    "model = train_model(X_train, X_test, y_train, y_test, RandomForestRegressor(max_depth=25, n_jobs=4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = train_model(X_train, X_test, y_train, y_test,\n",
+    "                    GradientBoostingRegressor(n_estimators=200, max_depth=5, min_samples_leaf=3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adaboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = train_model(X_train, X_test, y_train, y_test, AdaBoostRegressor())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation (common to all models)"
    ]
   },
   {
@@ -760,6 +874,15 @@
    "source": [
     "residuals = (y_test_pred - y_test) / np.abs(y_test)\n",
     "sns.histplot(residuals[residuals < 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoders[0].get_feature_names()"
    ]
   },
   {
