EDA for softwares

--- a/LoadData_GiftCards.ipynb
+++ b/LoadData_GiftCards.ipynb
@@ -9,7 +9,8 @@
     "- [Complete Metadata files](http://deepyeti.ucsd.edu/jianmo/amazon/index.html)\n",
     "- [Pandas reference sheet](https://ds100.org/sp21/resources/assets/exams/sp20/sp20_checkpoint_reference_sheet.pdf)\n",
     "- [Data-200 Google Doc](https://docs.google.com/document/d/19HWODy5kpWoUB7BEKEmKLbRnK8MC1fBmRat_WP7vfNc/edit)\n",
-    "- [Grad Project Guidelines](https://ds100.org/sp21/grad_proj/gradproject/)"
+    "- [Grad Project Guidelines](https://ds100.org/sp21/grad_proj/gradproject/)\n",
+    "- [Git repo](https://github.com/alexander-zw/data200-proj)"
    ]
   },
   {
