Writeup notebook + some more EDA on softwares

--- a/LoadData_Softwares.ipynb
+++ b/LoadData_Softwares.ipynb
@@ -121,7 +121,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews.groupby(by=\"reviewerID\").size().sort_values()"
+    "reviews['reviewerID'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews.query(\"reviewerID in ['A2AEZQ3DGBBLPR','A1PPD5TOR6VVYV','A3FGJDBSMCSG7G']\")"
    ]
   },
   {
