updated research q, motivation and lit review

--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -20,15 +20,16 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This project aims to predict the sales rank for a product on Amazon in a specific category of data, given the product's metadata. \n",
+    "This project aims to use Amazon metadata (e.g., product description, price, brand) to predict the Amazon sales rank within a specific category of data. The categories this project focuses on are `software` and `all beauty` products. \n",
     "\n",
     "## Motivation\n",
-    "Our target for this project is new venders who are interested in adding a product to Amazon. This model is helpful for them to understand what information (keywords, description, etc) can be used to improve a product's sales rank within its category.\n",
+    "Our target for this project is new venders who are interested in adding a product to Amazon. This model is helpful for them to understand what information (e.g., keywords in the description, specific brands/brand recognition, price, etc) can be used to improve a product's sales rank within its category.\n",
     "\n",
     "## Research Question\n",
-    "Can the metadata of Amazon products for a given category be used to predict the product's sales rank?\n",
+    "How can the metadata of Amazon products for a given category be used to predict a new product's sales rank in that category?\n",
     "\n",
-    "## Literature Review\n"
+    "## Literature Review\n",
+    "While we have not found this specific research question answered in existing literature, other projects use similar datasets to make sales-related predictions. A blog AIReview `https://www.aihello.com/resources/blog/2020/04/13/predicting-amazon-sales-using-deep-learning/` used deep learning to predict a product's sales, given the product's sales rank. Because they focused on top sellers and top seller categories, they were not able to make predictions for less high-selling categories.\n"
    ]
   },
   {
