--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -29,7 +29,7 @@
     "How can the metadata of Amazon products for a given category be used to predict a new product's sales rank in that category?\n",
     "\n",
     "## Literature Review\n",
-    "While we have not found this specific research question answered in existing literature, other projects use similar datasets to make sales-related predictions. A blog AIReview `https://www.aihello.com/resources/blog/2020/04/13/predicting-amazon-sales-using-deep-learning/` used deep learning to predict a product's sales, given the product's sales rank. Because they focused on top sellers and top seller categories, they were not able to make predictions for less high-selling categories.\n"
+    "While we have not found this specific research question answered in existing literature, other projects use similar datasets to make sales-related predictions. A blog AIReview `https://www.aihello.com/resources/blog/2020/04/13/predicting-amazon-sales-using-deep-learning/` used deep learning to predict a product's sales, given the product's sales rank. Because they focused on top sellers and top seller categories, they were not able to make predictions for less high-selling categories. Numerous academic papers have researched sales predictions at Amazon. One paper by Singh et al. titled 'Sales Forecast for Amazon Sales with Time Series Modeling' uses neural networks to forecast future sales at Amazon using historical sales data. These predictions were not category-specific. This project adds to the field by showing how you can predict a product's sales rank within its own category using the metadata for a product, specifically using many features that the vendor has control over [citation: https://ieeexplore.ieee.org/document/9071463].  \n"
    ]
   },
   {
