adding notes on features

--- a/Data200_ProjectWriteup.ipynb
+++ b/Data200_ProjectWriteup.ipynb
@@ -71,6 +71,14 @@
     "For the reviews dataset, we are specifically looking at the 5-core reviews. A k-core review dataset is a suset of the entire reviews dataset in which all users and items have at least 5 reviews. This dataset is smaller and less expensive on the computer memory.\n",
     "\n",
     "### Description of methods:\n",
+    "#### Feature Engineering\n",
+    "- One Hot Encoding: We chose to use a one hot encoding of the descriptions because... \n",
+    "- Price: Price is used as a feature in our model. The vendor can set the price of a product, and the price will affect a buyer's willingness to pay for the product.\n",
+    "- Price$^2$: Price squared is used as a feature in our model. Having the price squared will weight higher-priced items more heavily, which could negatively affect sales-rank. \n",
+    "- Brand Counts: This feature represents the number of total products of the same brand in the dataset. This could be a proxy for brand recognition, but also for products that are more ubiquitous. \n",
+    "- Brand$^2$: Brand squared is used as a feature in our model to highlight more ubiquitous brands. \n",
+    "\n",
+    "By squaring the price and brand count, we are allowing the model to train on a non-linear dataset. \n",
     "\n"
    ]
   },
